plot creation updated

--- a/pop_size.ipynb
+++ b/pop_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
     "from code.Utils import ESFitness\n",
     "\n",
     "# Default variable definitions\n",
-    "pop_sizes = [6, 8, 16, 24]\n",
+    "pop_sizes = [6, 8, 12, 16, 24]\n",
     "dimensionalities = [10, 20]\n",
     "functions = [3, 9, 14, 17, 23]\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +80,12 @@
     "        x = range(50)\n",
     "        orig_x = [i for i in x for _ in range(pop_size)]  # [0, ..., 0, 1, ..., 1, ..., 49, ..., 49]\n",
     "        \n",
-    "        plt.subplot(1,2,1)\n",
-    "        \n",
     "        orig_data = FCEs[(pop_size, ndim, fid)]\n",
-    "        data = [np.min(orig_data[i*pop_size:(i+1)*pop_size]) for i in x]\n",
+    "        temp_data = [np.min(orig_data[i*pop_size:(i+1)*pop_size]) for i in x]\n",
+    "        data = [np.min(temp_data[:i+1]) for i in x]\n",
     "        plt.plot(x, data, '-', label='$\\lambda$ = {}'.format(pop_size))\n",
     "        plt.ylabel('FCE')\n",
     "        plt.yscale('log')\n",
-    "        plt.legend(loc=0)\n",
-    "    \n",
-    "        plt.subplot(1,2,2)\n",
-    "    \n",
-    "        orig_data = ERTs[(pop_size, ndim, fid)]\n",
-    "        data = [np.min(orig_data[i*pop_size:(i+1)*pop_size]) for i in x]\n",
-    "        plt.plot(x, data, '-', label='$\\lambda$ = {}'.format(pop_size))\n",
-    "        plt.ylabel('ERT')\n",
     "        plt.legend(loc=0)\n",
     "\n",
     "    plt.tight_layout()\n",
