Added impact calculation

--- a/module_analysis.ipynb
+++ b/module_analysis.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "correlations = np.zeros((11, 120, 120))  # (module, from, to)\n",
+    "correlations = np.zeros((120, 120, 11))  # (module, from, to)\n",
     "data = []\n",
     "indices = product(dims, fids)\n",
     "\n",
@@ -520,23 +520,23 @@
     "    \n",
     "    for i in range(count):\n",
     "        for mod in range(11):\n",
-    "            correlations[mod, i, count] = pearsonr(temp[:, mod], data[i][:, mod])[0]\n",
-    "            correlations[mod, count, i] = correlations[mod, i, count]  # Symmetry!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for mod in range(11):\n",
-    "    np.savetxt(\"csv/module{}.csv\".format(mod), correlations[mod,:,:], delimiter=\",\")"
+    "            correlations[i, count, mod] = pearsonr(temp[:, mod], data[i][:, mod])[0]\n",
+    "            correlations[count, i, mod] = correlations[i, count, mod]  # Symmetry!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mod in range(11):\n",
+    "    np.savetxt(\"csv/module{}.csv\".format(mod), correlations[:,:,mod], delimiter=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,8 +546,10 @@
     "\n",
     "for mod in range(11):\n",
     "    plt.figure(figsize=(16,8))\n",
-    "    plt.pcolor(X, Y, correlations[mod,:,:], cmap='viridis')\n",
-    "    plt.savefig(\"plots/correlation_heatmap_{}.png\".format(features[mod]))\n",
+    "    plt.pcolor(X, Y, correlations[:,:,mod], cmap='viridis')\n",
+    "    plt.title(\"Behavior correlation for module '{}'\".format(modules[mod]))\n",
+    "    plt.colorbar()\n",
+    "    plt.savefig(\"plots/correlation_heatmap_{}.png\".format(modules[mod]))\n",
     "    # plt.savefig(\"plots/correlation_heatmap_{}.pdf\".format(features[mod]))\n",
     "    plt.close()"
    ]
@@ -599,19 +601,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attempt at creating an impact score per module:"
+    "Attempt at creating an impact score per module:<br>\n",
+    "Calculate average fitness for when a module is on and off, then subtract 'on' from 'off'.<br>\n",
+    "If the a module has a positive impact, it will have a positive impact score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.093836642154147498, 'Active')\n(0.060486362247045157, 'Elitist')\n(0.082386861276708107, 'Mirrored')\n(0.081447121347832954, 'Orthogonal')\n(0.091879829959533713, 'Sequential')\n(0.12425452356533062, 'Threshold')\n(0.077464574278500814, 'TPA')\n(0.08563173566675529, 'Selection')\n(0.093472746000540938, 'Weights')\n(0.12353563079156431, 'Base-Sampler')\n(0.11634632878256429, '(B)IPOP')\n"
+      "(-0.12603970584977009, 'Active')\n(0.27416365303545787, 'Elitist')\n(0.011357664679502499, 'Mirrored')\n(0.022634543826004504, 'Orthogonal')\n(-0.10255795951440454, 'Sequential')\n(-0.49105428278396746, 'Threshold')\n(0.070425108657990204, 'TPA')\n(-0.027580828001063332, 'Selection')\n(-0.12167295200649131, 'Weights')\n(0.01757243050122834, 'Base-Sampler')\n(0.10384405460922863, '(B)IPOP')\n"
      ]
     }
    ],
@@ -626,9 +630,9 @@
     "            indices_on = temp[:,mod] > 0\n",
     "            indices_off = temp[:,mod] < 1\n",
     "            \n",
-    "            mean_on = np.mean(temp[indices_on])\n",
-    "            mean_off = np.mean(temp[indices_off])\n",
-    "            impact[i_dim, fid-1, mod] = mean_on - mean_off\n",
+    "            mean_on = np.mean(temp[indices_on,11])\n",
+    "            mean_off = np.mean(temp[indices_off,11])\n",
+    "            impact[i_dim, fid-1, mod] = mean_off - mean_on\n",
     "            \n",
     "\n",
     "for x in zip(np.mean(np.mean(impact, axis=0), axis=0), modules):\n",
@@ -637,22 +641,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.008699827832270508, 0.082058414085847353, 'Active')\n(0.26877176979567569, 0.040339812853200208, 'Elitist')\n(0.0011571821280610363, 0.082407933922231225, 'Mirrored')\n(0.0001023737760318338, 0.084625254224462099, 'Orthogonal')\n(0.018013878068632486, 0.095112442070196757, 'Sequential')\n(0.27372936026098804, 0.14308843896593548, 'Threshold')\n(0.14799292232224573, 0.072707873295497771, 'TPA')\n(0.09445139024731837, 0.087970497960655702, 'Selection')\n(0.10509408289715751, 0.10359699876319928, 'Weights')\n(0.0022548470775266894, 0.12460130775040923, 'Base-Sampler')\n(0.079732365594091817, 0.10445672572629938, '(B)IPOP')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.set_printoptions(precision=2, linewidth=200)\n",
+    "x = np.arange(len(fids)+1)\n",
+    "y = np.arange(len(dims)+1)\n",
+    "X, Y = np.meshgrid(x, y)\n",
     "\n",
-    "for x in zip(importances[1,1,:], impact[1,1,:], modules):\n",
-    "    print(x)"
+    "for mod in range(len(modules)):\n",
+    "    plt.figure(figsize=(16,8))\n",
+    "    plt.pcolor(X, Y, impact[:,:,mod], cmap='viridis')\n",
+    "    plt.title(\"'Impact Estimate' of module '{}'\".format(modules[mod]))\n",
+    "    plt.colorbar()\n",
+    "    plt.xlim([0,24])\n",
+    "    plt.ylabel(\"Dimension\")\n",
+    "    plt.yticks([.5, 1.5, 2.5, 3.5, 4.5], ['2', '3', '5', '10', '20'])\n",
+    "    plt.xlabel(\"Function\")\n",
+    "    plt.savefig(\"plots/impact_heatmap_{}.png\".format(modules[mod]))\n",
+    "    # plt.savefig(\"plots/correlation_heatmap_{}.pdf\".format(features[mod]))\n",
+    "    plt.close()"
    ]
   },
   {
