expanded correlation calculations

--- a/module_analysis.ipynb
+++ b/module_analysis.ipynb
@@ -511,28 +511,31 @@
    },
    "outputs": [],
    "source": [
-    "correlations = np.zeros((120, 120, 11))  # (module, from, to)\n",
-    "data = []\n",
+    "correlations = np.zeros((5, 24, 11, 5, 24, 11))  # (module, from, to)\n",
+    "data = {x: {} for x in range(len(dims))}\n",
     "indices = product(dims, fids)\n",
     "\n",
-    "for count, index in enumerate(indices):\n",
-    "    dim, fid = index\n",
-    "    temp = cases[dim][fid][ cases[dim][fid][:,11].argsort() ][:,:11]\n",
-    "\n",
-    "    # replace all values '2' with '1'\n",
-    "    two_indices = temp == 2\n",
-    "    temp[two_indices] = 1\n",
-    "\n",
-    "    temp = np.cumsum(temp, axis=0)\n",
-    "    temp = temp - min_columns\n",
-    "    temp = temp / dists\n",
+    "for a_dim, dim in enumerate(dims):\n",
+    "    for a_fid, fid in enumerate(fids):\n",
+    "        temp = cases[dim][fid][ cases[dim][fid][:,11].argsort() ][:,:11]\n",
     "    \n",
-    "    data.append(temp)\n",
+    "        # replace all values '2' with '1'\n",
+    "        two_indices = temp == 2\n",
+    "        temp[two_indices] = 1\n",
     "    \n",
-    "    for i in range(count+1):\n",
-    "        for mod in range(11):\n",
-    "            correlations[i, count, mod] = pearsonr(temp[:, mod], data[i][:, mod])[0]\n",
-    "            correlations[count, i, mod] = correlations[i, count, mod]  # Symmetry!"
+    "        temp = np.cumsum(temp, axis=0)\n",
+    "        temp = temp - min_columns\n",
+    "        temp = temp / dists\n",
+    "        \n",
+    "        data[a_dim][a_fid] = temp\n",
+    "\n",
+    "for a_dim, _ in enumerate(dims):\n",
+    "    for a_fid, _ in enumerate(fids):\n",
+    "        for b_dim, _ in enumerate(dims):\n",
+    "            for b_fid, _ in enumerate(fids):\n",
+    "                for a_mod in range(len(modules)):\n",
+    "                    for b_mod in range(len(modules)):\n",
+    "                        correlations[a_dim, a_fid, a_mod, a_dim, a_fid, a_mod] = pearsonr(data[a_dim][a_fid][:, a_mod], data[b_dim][b_fid][:, b_mod])0]"
    ]
   },
   {
@@ -915,7 +918,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -927,7 +932,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
